--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,6 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "engines": {
-    "node": "16.x"
-  },
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
@@ -18,10 +15,10 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "4.0.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts --openssl-legacy-provider start"
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
